--- a/TicTacToeProject/src/testgui/Online.fxml
+++ b/TicTacToeProject/src/testgui/Online.fxml
@@ -32,12 +32,7 @@
                   <Image url="@../images/lock.png" />
                </image>
             </ImageView>
-            <Button fx:id="Login" layoutX="39.0" layoutY="322.0" mnemonicParsing="false" onAction="#handleLoginAction" prefHeight="32.0" prefWidth="89.0" style="-fx-background-radius: 2em; -fx-background-color: #60408b;" text="Login" textFill="#f8f7f7">
-               <font>
-                  <Font name="System Bold" size="15.0" />
-               </font>
-            </Button>
-            <Button fx:id="signUp" layoutX="206.0" layoutY="322.0" mnemonicParsing="false" onAction="#handleSignUpAction" prefHeight="32.0" prefWidth="89.0" style="-fx-background-radius: 2em; -fx-background-color: #60408b;" text="Sign Up" textFill="#f8f7f7">
+            <Button fx:id="Login" layoutX="100.0" layoutY="317.0" mnemonicParsing="false" onAction="#handleLoginAction" prefHeight="32.0" prefWidth="149.0" style="-fx-background-radius: 2em; -fx-background-color: #60408b;" text="Login" textFill="#f8f7f7">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
@@ -48,6 +43,7 @@
                   <Image url="@../images/previous.png" />
                </image>
             </ImageView>
+            <TextField fx:id="IP" layoutX="98.0" layoutY="154.0" promptText="Network IP" style="-fx-border-color: #60408b; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
          </children>
       </AnchorPane>
    </right>
