--- a/TicTacToeProject/src/testgui/OnlineHistory.fxml
+++ b/TicTacToeProject/src/testgui/OnlineHistory.fxml
@@ -8,28 +8,26 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #60408b;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testgui.OnlineHistoryController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testgui.OnlineHistoryController">
    <children>
-      <Label fx:id="title" layoutX="222.0" layoutY="29.0" text="Game History" textFill="WHITE">
+      <Label fx:id="title" layoutX="222.0" layoutY="29.0" text="Game History">
          <font>
-            <Font name="System Bold" size="24.0" />
+            <Font name="System Bold" size="20.0" />
          </font>
       </Label>
       <ScrollPane layoutY="85.0" prefHeight="250.0" prefWidth="600.0">
          <content>
             <TableView fx:id="historyTable" prefHeight="250.0" prefWidth="600.0">
               <columns>
-                <TableColumn fx:id="game" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Game" />
-                <TableColumn fx:id="player1" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Player1" />
-                  <TableColumn fx:id="p1score" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Player1 Score" />
-                  <TableColumn fx:id="player2" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Player2" />
-                  <TableColumn fx:id="p2score" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Player2 Score" />
-                  <TableColumn fx:id="winner" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Winner" />
+                <TableColumn fx:id="game" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" text="Game" />
+                <TableColumn fx:id="player1" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" text="Player1" />
+                  <TableColumn fx:id="player2" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" text="Player2" />
+                  <TableColumn fx:id="winner" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" text="Winner" />
               </columns>
             </TableView>
          </content>
       </ScrollPane>
-      <Button fx:id="back" layoutX="244.0" layoutY="342.0" mnemonicParsing="false" onAction="#handleBackAction" prefHeight="44.0" prefWidth="121.0" style="-fx-background-radius: 2em; -fx-background-color: #ffffff;" text="Back" textFill="#60408b">
+      <Button fx:id="back" layoutX="244.0" layoutY="342.0" mnemonicParsing="false" onAction="#handleBackAction" prefHeight="44.0" prefWidth="113.0" style="-fx-background-radius: 90;" text="Back">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
