--- a/TicTacToeProject/src/testgui/Local.fxml
+++ b/TicTacToeProject/src/testgui/Local.fxml
@@ -55,9 +55,7 @@
                   <Font name="System Bold" size="15.0" />
                </font>
             </Button>
-
-            <Button fx:id="Back" layoutX="10.0" layoutY="17.0" mnemonicParsing="false" onAction="#handleBackAction" prefHeight="30.0" prefWidth="33.0" style="-fx-background-color: transitive;" />
-            <ImageView fitHeight="34.0" fitWidth="20.0" layoutX="16.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="34.0" fitWidth="20.0" layoutX="16.0" layoutY="22.0" onMouseClicked="#handleBackAction" pickOnBounds="true" preserveRatio="true">
 
                <image>
                   <Image url="@../images/previous.png" />
