--- a/TicTacToeProject/src/testgui/Video.fxml
+++ b/TicTacToeProject/src/testgui/Video.fxml
@@ -6,21 +6,28 @@
 <?import javafx.scene.media.MediaView?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="BC" stylesheets="@style.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="testgui.VideoController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #60408b;" styleClass="BC" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testgui.VideoController">
    <children>
-      <MediaView fx:id="meaiaViewer" fitHeight="300.0" fitWidth="600.0" layoutY="43.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-      <Button fx:id="playAgainBtn" layoutX="91.0" layoutY="349.0" mnemonicParsing="false" onAction="#playAgain" text="Play again" AnchorPane.leftAnchor="91.0" AnchorPane.topAnchor="349.0" />
-      <Button fx:id="exitBtn" layoutX="436.0" layoutY="349.0" mnemonicParsing="false" onAction="#Exit" prefHeight="19.0" prefWidth="70.0" text="Exit" AnchorPane.topAnchor="349.0" />
-      <Label fx:id="WinnerPlayer" layoutX="286.0" layoutY="14.0" text="player" textFill="#fffdfd" AnchorPane.topAnchor="14.0">
+      <MediaView fx:id="meaiaViewer" fitHeight="280.0" fitWidth="700.0" layoutY="66.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+      <Label fx:id="WinnerPlayer" layoutX="277.0" layoutY="14.0" text="Player" textFill="#fffdfd" AnchorPane.topAnchor="14.0">
          <font>
-            <Font name="Arial Bold" size="20.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
       <Label fx:id="congrates" layoutX="84.0" layoutY="14.0" text="Congratulations" textFill="WHITE">
          <font>
-            <Font name="Arial Bold Italic" size="20.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
+      <Button fx:id="playAgainBtn" layoutX="70.0" layoutY="358.0" mnemonicParsing="false" onAction="#playAgain" prefHeight="32.0" prefWidth="161.0" style="-fx-background-radius: 2em; -fx-background-color: #ffffff;" text="Playe Again" textFill="#60408b">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Button>
+      <Button fx:id="exitBtn" layoutX="480.0" layoutY="358.0" mnemonicParsing="false" onAction="#Exit" prefHeight="32.0" prefWidth="161.0" style="-fx-background-radius: 2em; -fx-background-color: #ffffff;" text="Sign Up" textFill="#60408b">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
