--- a/TicTacToeProject/src/testgui/History.fxml
+++ b/TicTacToeProject/src/testgui/History.fxml
@@ -8,31 +8,31 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testgui.HistoryController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #60408b;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testgui.HistoryController">
    <children>
-      <Label fx:id="Title" layoutX="223.0" layoutY="14.0" text="Game History" textFill="#121212">
+      <Label fx:id="Title" layoutX="273.0" layoutY="14.0" text="Game History" textFill="WHITE">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button fx:id="Back" layoutX="268.0" layoutY="359.0" mnemonicParsing="false" onAction="#handleBackAction" prefHeight="31.0" prefWidth="94.0" style="-fx-background-radius: 90;" text="Back">
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Button>
-      <ScrollPane layoutX="-2.0" layoutY="46.0" prefHeight="306.0" prefWidth="600.0">
+      <ScrollPane layoutY="66.0" prefHeight="280.0" prefWidth="700.0" style="-fx-background-color: #E6E7D4;">
          <content>
-            <TableView fx:id="HistoryTableId" prefHeight="305.0" prefWidth="600.0">
+            <TableView fx:id="HistoryTableId" prefHeight="280.0" prefWidth="700.0" style="-fx-background-color: #ffffff;">
               <columns>
-                <TableColumn fx:id="gameDateId" maxWidth="500.0" minWidth="50.0" prefWidth="100.0" text="Game Date" />
-                <TableColumn fx:id="player1Id" maxWidth="500.0" minWidth="50.0" prefWidth="100.0" text="Player Name" />
-                  <TableColumn fx:id="pl1ScoreId" maxWidth="500.0" minWidth="50.0" prefWidth="100.0" text="player score" />
-                  <TableColumn fx:id="player2Id" maxWidth="500.0" minWidth="50.0" prefWidth="100.0" text="Pc" />
-                  <TableColumn fx:id="pl2ScoreId" maxWidth="500.0" minWidth="50.0" prefWidth="100.0" text="Pc score" />
-                  <TableColumn fx:id="winnerId" maxWidth="500.0" minWidth="50.0" prefWidth="100.0" text="winner" />
+                <TableColumn fx:id="gameDateId" maxWidth="500.0" minWidth="50.0" prefWidth="116.0" style="-fx-background-color: #FCF3CF;" text="Game Date" />
+                <TableColumn fx:id="player1Id" maxWidth="500.0" minWidth="50.0" prefWidth="116.0" style="-fx-background-color: #FCF3CF;" text="Player Name" />
+                  <TableColumn fx:id="pl1ScoreId" maxWidth="500.0" minWidth="50.0" prefWidth="116.0" style="-fx-background-color: #FCF3CF;" text="Player Score" />
+                  <TableColumn fx:id="player2Id" maxWidth="500.0" minWidth="50.0" prefWidth="116.0" style="-fx-background-color: #FCF3CF;" text="PC" />
+                  <TableColumn fx:id="pl2ScoreId" maxWidth="500.0" minWidth="50.0" prefWidth="116.0" style="-fx-background-color: #FCF3CF;" text="PC Score" />
+                  <TableColumn fx:id="winnerId" maxWidth="500.0" minWidth="50.0" prefWidth="116.0" style="-fx-background-color: #FCF3CF;" text="Winner" />
               </columns>
             </TableView>
          </content>
       </ScrollPane>
+      <Button fx:id="Back" layoutX="282.0" layoutY="354.0" mnemonicParsing="false" onAction="#handleBackAction" prefHeight="32.0" prefWidth="161.0" style="-fx-background-radius: 2em; -fx-background-color: #ffffff;" text="Back" textFill="#60408b">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
