--- a/TicTacToeProject/src/testgui/LocalHistory.fxml
+++ b/TicTacToeProject/src/testgui/LocalHistory.fxml
@@ -2,28 +2,37 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testgui.LocalHistoryController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #60408b;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testgui.LocalHistoryController">
    <children>
-      <Label layoutX="222.0" layoutY="7.0" text="Game History">
+      <Label fx:id="Title" layoutX="277.0" layoutY="14.0" text="Game History" textFill="WHITE">
          <font>
-            <Font name="Arial Bold Italic" size="24.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <TableView fx:id="tabelId" layoutY="36.0" prefHeight="323.0" prefWidth="600.0">
-        <columns>
-          <TableColumn fx:id="GameDate" prefWidth="100.0" text="Game Date" />
-          <TableColumn fx:id="Player1Name" prefWidth="100.0" text="player1 Name" />
-            <TableColumn fx:id="Player1Score" prefWidth="100.0" text="player1 Score" />
-            <TableColumn fx:id="Player2Name" prefWidth="100.0" text="Player2 Name" />
-            <TableColumn fx:id="Player2Score" prefWidth="100.0" text="Player2 Score" />
-            <TableColumn fx:id="Winner" prefWidth="100.0" text="Winner" />
-        </columns>
-      </TableView>
-      <Button fx:id="BackId" layoutX="275.0" layoutY="361.0" mnemonicParsing="false" onAction="#handleBackAction" text="Back" />
+      <ScrollPane layoutY="66.0" prefHeight="280.0" prefWidth="700.0" style="-fx-background-color: #E6E7D4;">
+         <content>
+            <TableView fx:id="tabelId" prefHeight="250.0" prefWidth="700.0" style="-fx-background-color: #ffffff;">
+               <columns>
+                  <TableColumn fx:id="GameDate" maxWidth="500.0" minWidth="50.0" prefWidth="116.0" style="-fx-background-color: #FCF3CF;" text="Game Date" />
+                  <TableColumn fx:id="Player1Name" maxWidth="500.0" minWidth="50.0" prefWidth="116.0" style="-fx-background-color: #FCF3CF;" text="Player 1" />
+                  <TableColumn fx:id="Player1Score" maxWidth="500.0" minWidth="50.0" prefWidth="116.0" style="-fx-background-color: #FCF3CF;" text="Player 1 Score" />
+                  <TableColumn fx:id="Player2Name" maxWidth="500.0" minWidth="50.0" prefWidth="116.0" style="-fx-background-color: #FCF3CF;" text="Player 2 Score" />
+                  <TableColumn fx:id="Player2Score" maxWidth="500.0" minWidth="50.0" prefWidth="116.0" style="-fx-background-color: #FCF3CF;" text="Player 2 Score" />
+                  <TableColumn fx:id="Winner" maxWidth="500.0" minWidth="50.0" prefWidth="116.0" style="-fx-background-color: #FCF3CF;" text="Winner" />
+               </columns>
+            </TableView>
+         </content>
+      </ScrollPane>
+      <Button fx:id="BackId" layoutX="270.0" layoutY="354.0" mnemonicParsing="false" onAction="#handleBackAction" prefHeight="32.0" prefWidth="161.0" style="-fx-background-radius: 2em; -fx-background-color: #ffffff;" text="Back" textFill="#60408b">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
