--- a/TicTacToeProject/src/testgui/OnlinePlayers.fxml
+++ b/TicTacToeProject/src/testgui/OnlinePlayers.fxml
@@ -8,30 +8,30 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" maxHeight="480.0" maxWidth="280.0" minHeight="480.0" minWidth="280.0" prefHeight="480.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testgui.OnlinePlayersController">
+<AnchorPane id="AnchorPane" maxHeight="400.0" maxWidth="700.0" minHeight="400.0" minWidth="700.0" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #60408b;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testgui.OnlinePlayersController">
    <children>
-      <Label fx:id="Title" layoutX="73.0" layoutY="29.0" text="Online Players" textFill="#121212">
+      <Label fx:id="Title" layoutX="259.0" layoutY="14.0" text="Online Players" textFill="#f5f5f5">
          <font>
-            <Font name="System Bold" size="20.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button fx:id="Backbtn" layoutX="85.0" layoutY="432.0" maxHeight="41.0" maxWidth="110.0" minHeight="30.0" minWidth="70.0" mnemonicParsing="false" onAction="#handleOnlineAction" prefHeight="41.0" prefWidth="110.0" style="-fx-background-radius: 90; -fx-background-color: #F5C0E9;" text="Back" textFill="#212121">
-         <font>
-            <Font name="System Bold" size="20.0" />
-         </font>
-      </Button>
-      <ScrollPane fx:id="ScrollTable" layoutY="70.0" prefHeight="360.0" prefWidth="280.0">
+      <ScrollPane fx:id="ScrollTable" layoutY="66.0" prefHeight="280.0" prefWidth="700.0">
          <content>
-            <TableView fx:id="TableP" onMousePressed="#OnMousePressed" prefHeight="355.0" prefWidth="278.0">
+            <TableView fx:id="TableP" onMousePressed="#OnMousePressed" prefHeight="280.0" prefWidth="700.0" style="-fx-background-color: #ffffff;">
               <columns>
-                <TableColumn fx:id="playerName" prefWidth="270.0" text="Player" />
-                <TableColumn fx:id="PlayerScore" minWidth="7.0" prefWidth="7.0" text="Score" />
+                <TableColumn fx:id="playerName" maxWidth="350.0" minWidth="350.0" prefWidth="350.0" style="-fx-background-color: #FCF3CF;" text="Player" />
+                <TableColumn fx:id="PlayerScore" maxWidth="350.0" minWidth="350.0" prefWidth="350.0" style="-fx-background-color: #FCF3CF;" text="Score" />
               </columns>
             </TableView>
          </content></ScrollPane>
-      <Button fx:id="refreshBtn1" layoutX="226.0" layoutY="24.0" maxHeight="41.0" maxWidth="110.0" minHeight="30.0" minWidth="40.0" mnemonicParsing="false" onAction="#refreshOnlineAction" prefHeight="41.0" prefWidth="40.0" style="-fx-background-radius: 90; -fx-background-color: #F5C0E9;" text="ref" textFill="#212121">
+      <Button fx:id="Backbtn" layoutX="110.0" layoutY="354.0" mnemonicParsing="false" onAction="#handleOnlineAction" prefHeight="32.0" prefWidth="161.0" style="-fx-background-radius: 2em; -fx-background-color: #ffffff;" text="Back" textFill="#60408b">
          <font>
-            <Font name="System Bold" size="14.0" />
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Button>
+      <Button fx:id="refreshBtn1" layoutX="420.0" layoutY="354.0" mnemonicParsing="false" onAction="#refreshOnlineAction" prefHeight="32.0" prefWidth="161.0" style="-fx-background-radius: 2em; -fx-background-color: #ffffff;" text="Refresh" textFill="#60408b">
+         <font>
+            <Font name="System Bold" size="15.0" />
          </font>
       </Button>
    </children>
