--- a/TicTacToeProject/src/testgui/History.fxml
+++ b/TicTacToeProject/src/testgui/History.fxml
@@ -1,38 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testgui.HistoryController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #332268;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testgui.HistoryController">
    <children>
-      <Label fx:id="Title" layoutX="223.0" layoutY="14.0" text="Game History" textFill="#121212">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
-      <Button fx:id="Back" layoutX="268.0" layoutY="359.0" mnemonicParsing="false" onAction="#handleBackAction" prefHeight="31.0" prefWidth="94.0" style="-fx-background-radius: 90;" text="Back">
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Button>
-      <ScrollPane layoutX="-2.0" layoutY="46.0" prefHeight="306.0" prefWidth="600.0">
+      <ScrollPane layoutX="251.0" layoutY="60.0" prefHeight="313.0" prefWidth="427.0" style="-fx-background-color: #E6E7D4;">
          <content>
-            <TableView fx:id="HistoryTableId" prefHeight="305.0" prefWidth="600.0">
+            <TableView fx:id="HistoryTableId" prefHeight="309.0" prefWidth="427.0" style="-fx-background-color: #ffffff;">
               <columns>
-                <TableColumn fx:id="gameDateId" maxWidth="500.0" minWidth="50.0" prefWidth="100.0" text="Game Date" />
-                <TableColumn fx:id="player1Id" maxWidth="500.0" minWidth="50.0" prefWidth="100.0" text="Player Name" />
-                  <TableColumn fx:id="pl1ScoreId" maxWidth="500.0" minWidth="50.0" prefWidth="100.0" text="player score" />
-                  <TableColumn fx:id="player2Id" maxWidth="500.0" minWidth="50.0" prefWidth="100.0" text="Pc" />
-                  <TableColumn fx:id="pl2ScoreId" maxWidth="500.0" minWidth="50.0" prefWidth="100.0" text="Pc score" />
-                  <TableColumn fx:id="winnerId" maxWidth="500.0" minWidth="50.0" prefWidth="100.0" text="winner" />
+                <TableColumn fx:id="gameDateId" maxWidth="500.0" minWidth="50.0" prefWidth="75.0" text="Game Date" />
+                <TableColumn fx:id="player1Id" maxWidth="500.0" minWidth="50.0" text="Player Name" />
+                  <TableColumn fx:id="pl1ScoreId" maxWidth="500.0" minWidth="50.0" text="Player Score" />
+                  <TableColumn fx:id="player2Id" maxWidth="500.0" minWidth="50.0" prefWidth="60.0" text="PC" />
+                  <TableColumn fx:id="pl2ScoreId" maxWidth="500.0" minWidth="50.0" prefWidth="70.0" text="PC Score" />
+                  <TableColumn fx:id="winnerId" maxWidth="500.0" minWidth="50.0" prefWidth="50.0" text="Winner" />
               </columns>
             </TableView>
          </content>
       </ScrollPane>
+      <ImageView fx:id="Back" fitHeight="32.0" fitWidth="43.0" layoutX="27.0" layoutY="28.0" onMouseClicked="#handleBackAction" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/previous.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="135.0" fitWidth="134.0" layoutX="27.0" layoutY="107.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/chess.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="43.0" layoutY="317.0" text="history" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="43.0" layoutY="288.0" text="Your games " textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
