--- a/TicTacToeProject/src/testgui/LocalHistory.fxml
+++ b/TicTacToeProject/src/testgui/LocalHistory.fxml
@@ -1,29 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testgui.LocalHistoryController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #332268;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testgui.LocalHistoryController">
    <children>
-      <Label layoutX="222.0" layoutY="7.0" text="Game History">
+      <ScrollPane layoutX="251.0" layoutY="60.0" prefHeight="313.0" prefWidth="427.0" style="-fx-background-color: #E6E7D4;">
+         <content>
+            <TableView fx:id="tabelId" prefHeight="309.0" prefWidth="427.0" style="-fx-background-color: #ffffff;">
+              <columns>
+                <TableColumn fx:id="GameDate" maxWidth="500.0" minWidth="50.0" prefWidth="75.0" text="Game Date" />
+                <TableColumn fx:id="Player1Name" maxWidth="500.0" minWidth="50.0" prefWidth="65.0" text="Player1" />
+                  <TableColumn fx:id="Player1Score" maxWidth="500.0" minWidth="50.0" prefWidth="65.0" text="Score" />
+                  <TableColumn fx:id="Player2Name" maxWidth="500.0" minWidth="50.0" prefWidth="60.0" text="Player2" />
+                  <TableColumn fx:id="Player2Score" maxWidth="500.0" minWidth="50.0" prefWidth="70.0" text="Score" />
+                  <TableColumn fx:id="Winner" maxWidth="500.0" minWidth="50.0" prefWidth="75.0" text="Winner" />
+              </columns>
+            </TableView>
+         </content>
+      </ScrollPane>
+      <ImageView fx:id="BackId" fitHeight="32.0" fitWidth="43.0" layoutX="27.0" layoutY="28.0" onMouseClicked="#handleBackAction" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/previous.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="135.0" fitWidth="134.0" layoutX="27.0" layoutY="107.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/chess.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="43.0" layoutY="317.0" text="history" textFill="WHITE">
          <font>
-            <Font name="Arial Bold Italic" size="24.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <TableView fx:id="tabelId" layoutY="36.0" prefHeight="323.0" prefWidth="600.0">
-        <columns>
-          <TableColumn fx:id="GameDate" prefWidth="100.0" text="Game Date" />
-          <TableColumn fx:id="Player1Name" prefWidth="100.0" text="player1 Name" />
-            <TableColumn fx:id="Player1Score" prefWidth="100.0" text="player1 Score" />
-            <TableColumn fx:id="Player2Name" prefWidth="100.0" text="Player2 Name" />
-            <TableColumn fx:id="Player2Score" prefWidth="100.0" text="Player2 Score" />
-            <TableColumn fx:id="Winner" prefWidth="100.0" text="Winner" />
-        </columns>
-      </TableView>
-      <Button fx:id="BackId" layoutX="275.0" layoutY="361.0" mnemonicParsing="false" onAction="#handleBackAction" text="Back" />
+      <Label layoutX="43.0" layoutY="288.0" text="Your games " textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
