--- a/TicTacToeProject/src/testgui/OnlineHistory.fxml
+++ b/TicTacToeProject/src/testgui/OnlineHistory.fxml
@@ -1,36 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testgui.OnlineHistoryController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #332268;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testgui.OnlineHistoryController">
    <children>
-      <Label fx:id="title" layoutX="222.0" layoutY="29.0" text="Game History">
-         <font>
-            <Font name="System Bold" size="20.0" />
-         </font>
-      </Label>
-      <ScrollPane layoutY="85.0" prefHeight="250.0" prefWidth="600.0">
+      <ScrollPane layoutX="251.0" layoutY="60.0" prefHeight="313.0" prefWidth="427.0" style="-fx-background-color: #E6E7D4;">
          <content>
-            <TableView fx:id="historyTable" prefHeight="250.0" prefWidth="600.0">
+            <TableView fx:id="historyTable" prefHeight="309.0" prefWidth="427.0" style="-fx-background-color: #ffffff;">
               <columns>
-                <TableColumn fx:id="game" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" text="Game" />
-                <TableColumn fx:id="player1" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" text="Player1" />
-                  <TableColumn fx:id="player2" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" text="Player2" />
-                  <TableColumn fx:id="winner" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" text="Winner" />
+                <TableColumn fx:id="game" maxWidth="500.0" minWidth="50.0" prefWidth="75.0" text="Game ID" />
+                <TableColumn fx:id="player1" maxWidth="500.0" minWidth="50.0" prefWidth="65.0" text="Player1" />
+                  <TableColumn fx:id="p1score" maxWidth="500.0" minWidth="50.0" prefWidth="65.0" text="Score" />
+                  <TableColumn fx:id="player2" maxWidth="500.0" minWidth="50.0" prefWidth="60.0" text="Player2" />
+                  <TableColumn fx:id="p2score" maxWidth="500.0" minWidth="50.0" prefWidth="70.0" text="Score" />
+                  <TableColumn fx:id="winner" maxWidth="500.0" minWidth="50.0" prefWidth="75.0" text="Winner" />
               </columns>
             </TableView>
          </content>
       </ScrollPane>
-      <Button fx:id="back" layoutX="244.0" layoutY="342.0" mnemonicParsing="false" onAction="#handleBackAction" prefHeight="44.0" prefWidth="113.0" style="-fx-background-radius: 90;" text="Back">
+      <ImageView fx:id="back" fitHeight="32.0" fitWidth="43.0" layoutX="27.0" layoutY="28.0" onMouseClicked="#handleBackAction" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/previous.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="135.0" fitWidth="134.0" layoutX="27.0" layoutY="107.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/chess.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="43.0" layoutY="317.0" text="history" textFill="WHITE">
          <font>
-            <Font name="System Bold" size="20.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
-      </Button>
+      </Label>
+      <Label layoutX="43.0" layoutY="288.0" text="Your games " textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
