--- a/TicTacToeProject/src/testgui/OnlinePlayers.fxml
+++ b/TicTacToeProject/src/testgui/OnlinePlayers.fxml
@@ -1,38 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" maxHeight="480.0" maxWidth="280.0" minHeight="480.0" minWidth="280.0" prefHeight="480.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testgui.OnlinePlayersController">
+<AnchorPane id="AnchorPane" maxHeight="400.0" maxWidth="700.0" minHeight="400.0" minWidth="700.0" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #332268;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testgui.OnlinePlayersController">
    <children>
-      <Label fx:id="Title" layoutX="73.0" layoutY="29.0" text="Online Players" textFill="#121212">
+      <Label fx:id="Title" layoutX="21.0" layoutY="269.0" text="Your online " textFill="#f5f5f5">
          <font>
-            <Font name="System Bold" size="20.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button fx:id="Backbtn" layoutX="85.0" layoutY="432.0" maxHeight="41.0" maxWidth="110.0" minHeight="30.0" minWidth="70.0" mnemonicParsing="false" onAction="#handleOnlineAction" prefHeight="41.0" prefWidth="110.0" style="-fx-background-radius: 90; -fx-background-color: #F5C0E9;" text="Back" textFill="#212121">
-         <font>
-            <Font name="System Bold" size="20.0" />
-         </font>
-      </Button>
-      <ScrollPane fx:id="ScrollTable" layoutY="70.0" prefHeight="360.0" prefWidth="280.0">
+      <ScrollPane fx:id="ScrollTable" layoutX="243.0" layoutY="32.0" prefHeight="336.0" prefWidth="386.0">
          <content>
-            <TableView fx:id="TableP" onMousePressed="#OnMousePressed" prefHeight="355.0" prefWidth="278.0">
+            <TableView fx:id="TableP" onMousePressed="#OnMousePressed" prefHeight="335.0" prefWidth="383.0" style="-fx-background-color: #ffffff;">
               <columns>
-                <TableColumn fx:id="playerName" prefWidth="270.0" text="Player" />
-                <TableColumn fx:id="PlayerScore" minWidth="7.0" prefWidth="7.0" text="Score" />
+                <TableColumn fx:id="playerName" maxWidth="200.0" minWidth="150.0" prefWidth="200.0" text="Player" />
+                <TableColumn fx:id="PlayerScore" maxWidth="200.0" minWidth="150.0" prefWidth="200.0" text="Score" />
               </columns>
             </TableView>
          </content></ScrollPane>
-      <Button fx:id="refreshBtn1" layoutX="226.0" layoutY="24.0" maxHeight="41.0" maxWidth="110.0" minHeight="30.0" minWidth="40.0" mnemonicParsing="false" onAction="#refreshOnlineAction" prefHeight="41.0" prefWidth="40.0" style="-fx-background-radius: 90; -fx-background-color: #F5C0E9;" text="ref" textFill="#212121">
+      <ImageView fx:id="refreshBtn1" fitHeight="35.0" fitWidth="38.0" layoutX="640.0" layoutY="26.0" onMouseClicked="#refreshOnlineAction" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/turnover.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="Backbtn" fitHeight="44.0" fitWidth="58.0" layoutX="21.0" layoutY="26.0" onMouseClicked="#handleOnlineAction" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/previous.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="26.0" layoutY="302.0" prefHeight="17.0" prefWidth="137.0" text="friends" textFill="WHITE">
          <font>
-            <Font name="System Bold" size="14.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
-      </Button>
+      </Label>
+      <ImageView fitHeight="150.0" fitWidth="137.0" layoutX="7.0" layoutY="119.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/fff.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
