--- a/TicTacToeProject/src/testgui/SingleMode.fxml
+++ b/TicTacToeProject/src/testgui/SingleMode.fxml
@@ -34,7 +34,7 @@
       <AnchorPane prefHeight="400.0" prefWidth="415.0" BorderPane.alignment="CENTER">
          <children>
             <TextField fx:id="NameText" layoutX="101.0" layoutY="195.0" promptText="Player Name" style="-fx-background-color: transparent; -fx-border-color: #60408b; -fx-border-width: 0px 0px 2px 0px;" />
-            <Button fx:id="nectBtn" layoutX="131.0" layoutY="279.0" mnemonicParsing="false" onAction="#handleNextAction" prefHeight="32.0" prefWidth="89.0" style="-fx-background-color: #60408b; -fx-background-radius: 2em;" text="Login" textFill="WHITE">
+            <Button fx:id="nectBtn" layoutX="131.0" layoutY="279.0" mnemonicParsing="false" onAction="#handleNextAction" prefHeight="32.0" prefWidth="89.0" style="-fx-background-radius: 2em; -fx-background-color: #332268;" text="Login" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
@@ -45,7 +45,7 @@
             </ImageView>
             <ImageView fitHeight="70.0" fitWidth="91.0" layoutX="131.0" layoutY="86.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../images/groupp.png" />
+                  <Image url="@../images/r4.png" />
                </image>
             </ImageView>
             <ImageView fx:id="backbtn" fitHeight="32.0" fitWidth="52.0" layoutX="29.0" layoutY="19.0" onMouseClicked="#handleBackAction" pickOnBounds="true" preserveRatio="true">
