--- a/TicTacToeProject/src/testgui/Video.fxml
+++ b/TicTacToeProject/src/testgui/Video.fxml
@@ -1,26 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.media.MediaView?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="BC" stylesheets="@style.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="testgui.VideoController">
+<AnchorPane id="AnchorPane" prefHeight="390.0" prefWidth="694.0" style="-fx-background-color: #332268;" styleClass="BC" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="testgui.VideoController">
    <children>
-      <MediaView fx:id="meaiaViewer" fitHeight="300.0" fitWidth="600.0" layoutY="43.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-      <Button fx:id="playAgainBtn" layoutX="91.0" layoutY="349.0" mnemonicParsing="false" onAction="#playAgain" text="Play again" AnchorPane.leftAnchor="91.0" AnchorPane.topAnchor="349.0" />
-      <Button fx:id="exitBtn" layoutX="436.0" layoutY="349.0" mnemonicParsing="false" onAction="#Exit" prefHeight="19.0" prefWidth="70.0" text="Exit" AnchorPane.topAnchor="349.0" />
-      <Label fx:id="WinnerPlayer" layoutX="286.0" layoutY="14.0" text="player" textFill="#fffdfd" AnchorPane.topAnchor="14.0">
+      <MediaView fx:id="meaiaViewer" fitHeight="400.0" fitWidth="700.0" layoutY="51.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+      <Label fx:id="WinnerPlayer" layoutX="377.0" layoutY="23.0" text="player" textFill="#fffdfd" AnchorPane.topAnchor="23.0">
          <font>
             <Font name="Arial Bold" size="20.0" />
          </font>
       </Label>
-      <Label fx:id="congrates" layoutX="84.0" layoutY="14.0" text="Congratulations" textFill="WHITE">
+      <Label fx:id="congrates" layoutX="196.0" layoutY="14.0" prefHeight="40.0" prefWidth="161.0" text="Congratulations" textFill="WHITE">
          <font>
-            <Font name="Arial Bold Italic" size="20.0" />
+            <Font name="Arial Bold Italic" size="21.0" />
          </font>
       </Label>
+      <ImageView fx:id="playAgainBtn" fitHeight="40.0" fitWidth="51.0" layoutX="337.0" layoutY="377.0" onMouseClicked="#playAgain" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/rr.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="exitBtn" fitHeight="31.0" fitWidth="47.0" layoutX="644.0" layoutY="19.0" onMouseClicked="#Exit" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/cancel.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
